--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anil-practice",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Get random countries",
   "main": "src/index.js",
   "scripts": {
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/anil-shivamurthy/Country-list#readme",
   "dependencies": {
+    "anil-practice": "1.0.0",
     "unique-random-array": "2.0.0"
   }
 }
