--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "anil-practice",
-  "version": "1.1.0",
+  "version": "1.4.0-beta.0",
   "description": "Get random countries",
   "main": "src/index.js",
   "scripts": {
